--- a/CSS/book.css
+++ b/CSS/book.css
@@ -7,6 +7,16 @@
     position: relative;
 }
 
+.bookHeroImage::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5));
+}
+
 .headMainContainer {
     display: grid;
     grid-template-columns: 20% 60% 20%;
