--- a/CSS/book.css
+++ b/CSS/book.css
@@ -518,25 +518,14 @@ input[type=number] {}
     color: white;
 }
 
-/*
-.returnButton {
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-size: larger;
-    transition: 500ms;
-    padding: 10px;
-    font-style: oblique;
-    font-family: 'Raleway', sans-serif;
-    margin-top: 20px;
-}
-
-.returnButton a {
-    color: black;
-    text-decoration: none;
+#bookName2,
+#bookName3,
+#bookName4 {
+    font-size: 22px;
+    color: #E6D8D7;
     font-family: 'Raleway', sans-serif;
 }
 
-
-
-*/
+.bookingInformationRow {
+    font-family: 'Raleway', sans-serif;
+}
