--- a/CSS/book.css
+++ b/CSS/book.css
@@ -7,6 +7,25 @@
     position: relative;
 }
 
+.bookHeroImage2 {
+    min-height: 60vh;
+    width: 100%;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.bookHeroImage2::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5));
+}
+
 .bookHeroImage::before {
     content: '';
     position: absolute;
