--- a/CSS/header.css
+++ b/CSS/header.css
@@ -9,7 +9,7 @@ header {
     transition: 500ms;
     z-index: 1;
     background-color: black;
-   /* border-bottom: solid 2px #94652B;*/
+    /* border-bottom: solid 2px #94652B;*/
 }
 
 .navigation {
@@ -40,8 +40,8 @@ header {
 
 .navigationLinks a,
 .login a {
-    /*font-family: "Montserrat", sans-serif;*/
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
+    /*font-family: "Montserrat";*/
 }
 
 .logo {
