--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -6,13 +6,12 @@ footer {
 	padding: 16px 0;
 	transition: 500ms;
 	bottom: 0;
-	/*border-top: solid 2px #94652B;*/
 }
 
 .footerLogo h3 {
 	cursor: pointer;
 	font-size: 1.5em;
-	font-family: "Isabel Thin";
+	font-family: "Isabel Light";
 	background: rgb(148, 101, 43);
 	background: linear-gradient(90deg, rgba(148, 101, 43, 1) 0%, rgba(214, 192, 118, 1) 50%, rgba(148, 101, 43, 1) 100%);
 	-webkit-background-clip: text;
