--- a/CSS/heroImage.css
+++ b/CSS/heroImage.css
@@ -35,7 +35,8 @@
     font-size: 22px;
 }
 
-.heroImageTitle, .heroImageQuote {
+.heroImageTitle,
+.heroImageQuote {
     background-color: rgba(0, 0, 0, 0.159);
 }
 
@@ -50,7 +51,6 @@
     width: 100%;
     padding: 50px;
     background-color: black;
-    /*color: #D49641;*/
     color: #E6D8D7;
 }
 
