--- a/CSS/header.css
+++ b/CSS/header.css
@@ -66,14 +66,6 @@ header {
 
 /* ----------------------- Small Navigation  -------------------------- */
 
-#openNavbutton img,
-#closeNavbutton img {
-    width: 15px;
-    height: 15px;
-    margin: 0;
-    padding: 0;
-}
-
 #openNavbutton span,
 #closeNavbutton span {
     width: 25px;
@@ -103,7 +95,6 @@ header {
     background-color: #191919;
     border-radius: 50%;
     padding: 10px;
-    border: solid .5px white;
     justify-content: center;
     margin: 0px;
 }
@@ -118,7 +109,8 @@ header {
     background-color: black;
     overflow-x: hidden;
     padding-top: 60px;
-    transition: 0.5s;
+    transition: 500ms;
+    border-left: solid 1px #E6D8D7;
 }
 
 .smallNavigation a {
@@ -127,7 +119,7 @@ header {
     text-decoration: none;
     font-size: 25px;
     color: white;
-    transition: 0.3s;
+    transition: 500ms;
     font-family: "Montserrat";
 }
 
