--- a/CSS/header.css
+++ b/CSS/header.css
@@ -83,7 +83,6 @@ header {
     border-radius: 50%;
     padding: 10px;
     border: solid .5px white;
-    justify-content: center;
     margin: 0px;
 }
 
@@ -95,7 +94,6 @@ header {
     background-color: #191919;
     border-radius: 50%;
     padding: 10px;
-    justify-content: center;
     margin: 0px;
 }
 
@@ -106,7 +104,7 @@ header {
     z-index: 1;
     top: 0;
     right: 0;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.895);
     overflow-x: hidden;
     padding-top: 60px;
     transition: 500ms;
