--- a/CSS/header.css
+++ b/CSS/header.css
@@ -77,10 +77,11 @@ header {
 #openNavbutton {
     display: none;
     bottom: 7%;
+    /*top: 93%; */
     right: 2%;
     position: fixed;
     background-color: #191919;
-    border-radius: 50%;
+    border-radius: 500px;
     padding: 10px;
     border: solid .5px white;
     margin: 0px;
@@ -89,6 +90,7 @@ header {
 #closeNavbutton {
     display: none;
     bottom: 7%;
+    /*top: 93%; */
     right: 2%;
     position: fixed;
     background-color: #191919;
