--- a/CSS/header.css
+++ b/CSS/header.css
@@ -66,6 +66,50 @@ header {
 
 /* ----------------------- Small Navigation  -------------------------- */
 
+#openNavbutton,
+#closeNavbutton {
+    display: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #191919;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    line-height: 10px;
+
+    bottom: 27px;
+    right: 19px;
+    position: fixed;
+}
+
+.smallNavigation {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.895);
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 500ms;
+    border-left: solid 1px #E6D8D7;
+}
+
+.smallNavigation a {
+    display: block;
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    transition: 500ms;
+    font-family: "Montserrat";
+}
+
+
+/*
 #openNavbutton span,
 #closeNavbutton span {
     width: 25px;
@@ -77,7 +121,7 @@ header {
 #openNavbutton {
     display: none;
     bottom: 7%;
-    /*top: 93%; */
+    /*top: 93%; 
     right: 2%;
     position: fixed;
     background-color: #191919;
@@ -90,7 +134,7 @@ header {
 #closeNavbutton {
     display: none;
     bottom: 7%;
-    /*top: 93%; */
+    /*top: 93%; 
     right: 2%;
     position: fixed;
     background-color: #191919;
@@ -125,4 +169,6 @@ header {
 
 #main {
     transition: margin-left .5s;
-}
+}  
+
+*/
