--- a/CSS/aboutLimovia.css
+++ b/CSS/aboutLimovia.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding: 20px 0px;
+    background-color: #191919;
 }
 
 .aboutLimoviaInfo:nth-child(2) {
