--- a/CSS/mediaQueries.css
+++ b/CSS/mediaQueries.css
@@ -522,6 +522,6 @@
 		display: grid;
 		grid-template-columns: repeat(1, 1fr) !important;
 		grid-gap: 30px;
-		text-align: centers;
+		text-align: center;
 	}
 }
