Log in fix :100:

--- a/CSS/logIn.css
+++ b/CSS/logIn.css
@@ -131,6 +131,14 @@ body {
     text-decoration: none;
 }
 
+.logoAndText ul {
+    padding: 0px;
+}
+
+.logoAndText li {
+    list-style: none;
+}
+
 .loginText {
     color: white;
     font-family: 'Raleway', sans-serif;
