--- a/CSS/dashboardHomepage.css
+++ b/CSS/dashboardHomepage.css
@@ -1,5 +1,3 @@
-main {}
-
 .mainPageContainer {
     background-color: green;
 }
@@ -39,24 +37,130 @@ main {}
     background-color: #191919;
 }
 
-.welcomeText h1 {
+.welcomeMessage {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    justify-content: center;
+}
+
+.welcomeMessage h1 {
     font-weight: 400;
     text-align: center;
+    color: #E6D8D7;
+}
+
+.welcomeMessage img {
+    width: 200px;
+    height: auto;
 }
 
 /* ----------------------------- Next trip section ------------------------ */
 
+.dashboardInfoContainer {}
 
-.nextTripSection {
-    box-shadow: rgba(0, 0, 0, 0.6) 0px 4px 8px 0px;
-    transition: 0.3s;
-    box-sizing: border-box;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.tripSection {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
 }
 
+.sectionBorder {
+    box-sizing: border-box;
+    box-shadow: rgba(0, 0, 0, 0.6) 0px 4px 8px 0px;
+    padding: 20px;
+    transition: 0.3s;
+}
+
+
+/* ------------------------------ Prevoius Trip Section ---------------------------- */
+
+.prevoiusTrip {}
+
+.prevoiusTrip h2 {
+    font-weight: lighter;
+    color: #E6D8D7;
+    padding: 0 0 20px 0;
+}
+
+.startPointEndPoint {
+    display: flex;
+    justify-content: space-between;
+    font-family: "Montserrat";
+    font-size: 15px;
+}
+
+.pointDivider hr {
+    border: solid 1px #D4A78C;
+    height: 20px;
+}
+
+.tripInfo {
+    display: flex;
+    justify-content: space-between;
+    font-family: "Montserrat";
+    font-size: smaller;
+}
+
+.tripLine {
+    display: flex;
+    align-items: center;
+    padding: 5px 0;
+}
+
+.middleLine {
+    flex-grow: 1;
+}
+
+.gradientLine {
+    height: 4px;
+    border: none;
+    border-radius: 2px;
+    background: #D4A78C;
+    width: 100%;
+    margin: 0;
+}
+
+.dot {
+    height: 10px;
+    width: 10px;
+    background-color: #D4A78C;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
 .bookNewTrip li {
     list-style: none;
 }
@@ -83,10 +187,6 @@ main {}
     color: white;
 }
 
-/*.nextTripTitleAndButton {
-    display: flex;
-    justify-content: space-between;
-}*/
 
 .nextTripText {
     display: flex;
@@ -98,3 +198,8 @@ main {}
     padding-top: 20px;
     padding-right: 20px;
 }
+
+/*.nextTripTitleAndButton {
+    display: flex;
+    justify-content: space-between;
+}*/
