--- a/CSS/dashboardHomepage.css
+++ b/CSS/dashboardHomepage.css
@@ -107,7 +107,7 @@
 .tripLine {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-bottom: 12px;
 }
 
