--- a/CSS/dashboardHomepage.css
+++ b/CSS/dashboardHomepage.css
@@ -65,10 +65,11 @@
     grid-gap: 10px;
 }
 
-.sectionBorder {
+.nextTripSection {
     box-sizing: border-box;
     box-shadow: rgba(0, 0, 0, 0.6) 0px 4px 8px 0px;
     padding: 20px;
+    border-radius: 10px;
     transition: 0.3s;
 }
 
@@ -82,15 +83,12 @@
 }
 
 
-
-/* Rubrik */
 .lastTripCard h2 {
     margin-bottom: 15px;
     font-weight: lighter;
     color: #E6D8D7;
 }
 
-/* Adresser */
 .tripAddresses {
     display: flex;
     justify-content: space-between;
@@ -118,7 +116,6 @@
     text-align: right;
 }
 
-/* Linje + prickar */
 .tripLineWrapper {
     position: relative;
     height: 12px;
@@ -157,8 +154,6 @@
     right: 0;
 }
 
-
-/* Detaljer + chip */
 .tripDetails {
     display: flex;
     justify-content: space-between;
