--- a/CSS/dashboardHomepage.css
+++ b/CSS/dashboardHomepage.css
@@ -87,7 +87,7 @@
     display: flex;
     gap: 24px;
     font-size: 1rem;
-    color: #F4E4D4;
+    color: white;
     font-family: "Montserrat", sans-serif;
 }
 
