--- a/CSS/book.css
+++ b/CSS/book.css
@@ -84,13 +84,19 @@
     grid-template-columns: repeat(7, 1fr);
     text-align: center;
     font-size: large;
-    grid-gap: 10px;
+    grid-gap: 5px;
 }
 
 .day {
     padding: 10px;
     font-size: large;
     cursor: pointer;
+
+    aspect-ratio: 1 / 1;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 .day:hover {
