--- a/CSS/dashboardHomepage.css
+++ b/CSS/dashboardHomepage.css
@@ -1,8 +1,8 @@
 .mainPageContainer {
-    background-color: green;
+    background: green
 }
 
-.mainProfileSideLinks {
+.dashboardNavigation {
     padding-top: 75px;
     width: 340px;
     background-color: black;
@@ -13,21 +13,70 @@
     left: 0;
 }
 
+.profileImageAndLevel {
+    padding: 70px 0px 20px 0px;
+}
+
+.avatarProfile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    font-family: 'Raleway', sans-serif;
+}
+
+.avatarProfile img {
+    height: 80px;
+    width: 80px;
+    border-radius: 100%;
+}
+
+.avatarName {
+    padding-top: 10px;
+    padding-bottom: 5px;
+    font-size: larger;
+    color: white;
+}
+
+.avatarRank {
+    background: rgb(148, 101, 43);
+    background: linear-gradient(90deg, rgba(148, 101, 43, 1) 0%, rgba(214, 192, 118, 1) 50%, rgba(148, 101, 43, 1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 .mainProfileLinks li {
     list-style: none;
 }
 
-.mainProfileLinks a {
-    display: block;
+.profileLinks a {
+    display: flex;
+    justify-content: center;
     color: white;
     text-decoration: none;
     font-family: "Montserrat";
     font-size: larger;
     padding: 20px;
+    width: 100%;
 }
 
-.mainProfileLinks a:hover {
+.profileLinks a:hover {
     color: #D4A78C;
+    transition: 500ms;
+}
+
+.siteInfo {
+    padding: 95px 35px;
+    margin-left: 340px;
+    color: white;
+    background: linear-gradient(135deg, #0C0C0C 0%, #1A1A1A 100%);
+}
+
+/**
+.profileAvatar img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 
 .mainProfileInfo {
@@ -55,7 +104,7 @@
     height: auto;
 }
 
-/* ----------------------------- Next trip section ------------------------ */
+/* ----------------------------- Next trip section ------------------------ 
 
 .tripSection {
     display: grid;
@@ -128,7 +177,7 @@
     color: #D4A78C;
 }
 
-/* ------------------------------ Prevoius Trip Section ---------------------------- */
+/* ------------------------------ Prevoius Trip Section ---------------------------- 
 .lastTripCard {
     padding: 20px;
     border-radius: 10px;
@@ -234,7 +283,7 @@
     margin-right: 4px;
 }
 
-/* ------------------------------ Bonus points ------------------------------ */
+/* ------------------------------ Bonus points ------------------------------ 
 
 .pointsAndLeasing {
     display: grid;
@@ -342,6 +391,8 @@
 
 
 /* Gör övriga nivåer hover-aktiva */
+
+/*
 .level:hover .bonusDot {
     background: #c2a77c;
     border-color: #e0c28a;
