--- a/CSS/dashboardHomepage.css
+++ b/CSS/dashboardHomepage.css
@@ -1,5 +1,6 @@
 .mainPageContainer {
-    background: green
+    color: white;
+        background: linear-gradient(135deg, #0C0C0C 0%, #1A1A1A 100%);
 }
 
 .dashboardNavigation {
@@ -65,13 +66,6 @@
     transition: 500ms;
 }
 
-.siteInfo {
-    padding: 95px 35px;
-    margin-left: 340px;
-    color: white;
-    background: linear-gradient(135deg, #0C0C0C 0%, #1A1A1A 100%);
-}
-
 .welcomeMessage {
     display: flex;
     justify-content: space-between;
@@ -101,8 +95,12 @@
     color: #E6D8D7;
 }
 
-.welcomeImage button
+.overViewContainer {
+padding: 95px 30px 10px 30px;
+    margin-left: 340px;
+}
 
+.welcomeImage button
 /*.welcomeMessage img {
     width: 200px;
     height: auto;
